--- a/in.html
+++ b/in.html
@@ -279,7 +279,7 @@ a:hover {
 
 #tab-button {
   color: white;
-  background-color: #22c522;
+  background-color: #c52222;
   border-radius: 20px;
   padding: 5px 10px;
   margin-top: 10px;
@@ -312,7 +312,7 @@ a:hover {
 		}
     </script>
     <meta charset="utf-8" />
-    <title>Seismetic | Games</title>
+    <title>SeismeticX</title>
     <meta name="googlebot" content="noindex, nofollow, nosnippet" />
     <link rel="shortcut icon" content="/img/Sm.png" />
     <script src="./JS/particles.js" defer></script>
@@ -327,10 +327,10 @@ a:hover {
       <!---->
       <div class="container">
         <div class="image-container">
-          <img src="./img/seismeticv2.png" alt="Your Image" class="rounded-image">
+          <img src="./img/yeahbigperc.png" alt="Your Image" class="rounded-image">
         </div>
         <div class="text-container">
-          <p>SeismeticV2</p>
+          <p>SeismeticX</p>
           <button onclick="seismetic()" id="tab-button">Launch</button>
         </div>
       </div>
