--- a/newlink.html
+++ b/newlink.html
@@ -384,8 +384,8 @@ a:hover {
   </head>
 
   <body>
-    <h1>imagine being so jealous you try to claim it as your own</h1>
-    <p>This message goes out to raymen</p>
+    <h1>To clarify Seismetic did not shutdown</h1>
+    <p>The wifi is just ass This should be fixed</p>
     <div class="center">
       <div id="calculator-container">
       <div id="calculator">
