--- a/newlink.html
+++ b/newlink.html
@@ -75,6 +75,8 @@
 		</div>
 	</div>
 	<div class="center">
+		<h1> Seismetic X Announcement </h1>
+		<p> The end of Seismetic X is near Seismetic X was backup servers its now time to go back to the green one</p>
 		<div id="calculator-container">
 		<div id="calculator">
 		  <input type="text" id="result" disabled />
