--- a/newlink.html
+++ b/newlink.html
@@ -76,7 +76,7 @@
 	</div>
 	<div class="center">
 		<h1> Seismetic X Announcement </h1>
-		<p> The end of Seismetic X is near Seismetic X was backup servers its now time to go back to the green one</p>
+		<p>The End has happend the backup servers have now shut down Its back to the green servers (Requested by Jason H)</p>
 		<div id="calculator-container">
 		<div id="calculator">
 		  <input type="text" id="result" disabled />
