--- a/in.html
+++ b/in.html
@@ -34,12 +34,15 @@
         </div>
         <div class="logo-container">
          <h1>Announcement</h1>
-         <p>No Announcement</p>
+         <p></p>
          <h1>Changelog</h1>
-         <p>ADDED TWERK RACE</p>
-          <p>Fixed Username decoding</p>
-          <p>Added Retro Bowl</p>
+         <p>- Implemented Ban System</p>
+         <p>- proxied logging</p>
+         <p>- Implemented Ban System</p>
+         <p>- added responses</p>
           <a onclick="classic('./backup.html')">Backup Mode</a>
+          <p>---</p>
+          <a onclick="classic('https://docs.google.com/spreadsheets/d/1yBN9tKQeabKb8NN2YpsHX43cO16ldBcBbB4QIYQjvU4/edit?usp=sharings')">View Responses</a>
           <h1>HONORABLE MENTIONS</h1>
           <img src="./honorable.png">
         </div>
