--- a/backup.html
+++ b/backup.html
@@ -12,7 +12,6 @@
         <p>will look way nicer later</p>
         <button onclick="window.location.href='./offline/retro'">RetroBowl</button>
         <button onclick="window.location.href='./offline/Slope'">Slope</button>
-        <button onclick="window.location.href='./offline/MonkeyMart'">Monkeymart (NO ADS)</button>
-        <button onclick="window.location.href='./offline/roblox'">Roblox</button>
+        <button onclick="window.location.href='./offline/MonkeyMart'">Monkeymart</button>
     </body>
 </html>
