--- a/in.html
+++ b/in.html
@@ -34,7 +34,7 @@
         </div>
         <div class="logo-container">
          <h1>Announcement</h1>
-         <p>""</p>
+         <p>NO SEISMETIC IS NOT SHUTTING DOWN! WHEN ITS THE WEEKEND SEISMETIC IS ON THE BACKUP SERVERS INSTEAD OF MY COMPUTER</p>
          <h1>Changelog</h1>
          <p>- Implemented Ban System</p>
          <p>- proxied logging</p>
@@ -43,8 +43,6 @@
           <a onclick="classic('./backup.html')">Backup Mode</a>
           <p>---</p>
           <a onclick="classic('https://docs.google.com/spreadsheets/d/1yBN9tKQeabKb8NN2YpsHX43cO16ldBcBbB4QIYQjvU4/edit?usp=sharings')">View Responses</a>
-          <h1>HONORABLE MENTIONS</h1>
-          <img src="./honorable.png">
         </div>
       </div>
     </div>
