--- a/in.html
+++ b/in.html
@@ -33,7 +33,7 @@
         <p>more soon</p>
         </div>
         <div class="logo-container">
-         <h1>go follow @you_is_confusingB go follow fw_maur and vlad.s_123</h1>
+         <h1>go follow @you_is_confusingB go follow @fw_mau and @vlad.s_123</h1>
          <p>NO SEISMETIC IS NOT SHUTTING DOWN! WHEN ITS THE WEEKEND SEISMETIC IS ON THE BACKUP SERVERS INSTEAD OF MY COMPUTER</p>
          <h1>Changelog</h1>
          <p>- Implemented Ban System</p>
