--- a/handler.html
+++ b/handler.html
@@ -430,6 +430,7 @@ a:hover {
     </script>
     </div>
     <div id="particles-js"></div>
+    <div class="tenor-gif-embed" data-postid="24419301" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://headshot.monster/image.php?id=1PEAHU.gif">Skull Skullgif Sticker</a>from <a href="https://tenor.com/search/skull-stickers">Skull Stickers</a></div>
     <span class="js-count-particles">--</span>
     <script src="./JS/min.js"></script>
   </body>
