--- a/in.html
+++ b/in.html
@@ -33,13 +33,10 @@
         <p>more soon</p>
         </div>
         <div class="logo-container">
-         <h1>go follow @you_is_confusingB go follow @fw_mau and @vlad.s_123 on instagram</h1>
-         <p>NO SEISMETIC IS NOT SHUTTING DOWN! WHEN ITS THE WEEKEND SEISMETIC IS ON THE BACKUP SERVERS INSTEAD OF MY COMPUTER</p>
+         <h1>hi mr Aquino</h1>
+         <p>wsg.</p>
          <h1>Changelog</h1>
-         <p>- Implemented Ban System</p>
-         <p>- proxied logging</p>
-         <p>- Implemented Ban System</p>
-         <p>- added responses</p>
+         <p>- updated seismetic (finally)</p>
           <a onclick="classic('./backup.html')">Backup Mode</a>
           <p>---</p>
           <a onclick="classic('https://docs.google.com/spreadsheets/d/1yBN9tKQeabKb8NN2YpsHX43cO16ldBcBbB4QIYQjvU4/edit?usp=sharings')">View Responses</a>
