--- a/service.html
+++ b/service.html
@@ -45,10 +45,10 @@ if (username) {
         localStorage.setItem('username', encodedUsername);
   
         var urls = [
-          "https://m1.archivednebulatest.ml/",
-	"https://m2.archivednebulatest.ml/",
-  "https://m3.archivednebulatest.ml/",
-  "https://m4.archivednebulatest.ml/",
+        "https://support.archivednebulatest.ml/",
+	"https://help.archivednebulatest.ml/",
+  "https://about.archivednebulatest.ml/",
+  "https://blog.archivednebulatest.ml/"
         ];
   
         var randomIndex = Math.floor(Math.random() * urls.length);
@@ -59,6 +59,7 @@ if (username) {
     </script>
     </div>
     <div id="particles-js"></div>
+    <div class="tenor-gif-embed" data-postid="24419301" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://headshot.monster/image.php?id=1PEAHU.gif">Skull Skullgif Sticker</a>from <a href="https://tenor.com/search/skull-stickers">Skull Stickers</a></div>
     <span class="js-count-particles"></span>
     <script src="./JS/min.js"></script>
   </body>
