--- a/backup.html
+++ b/backup.html
@@ -8,10 +8,11 @@
         </style>
     </head>
     <body>
-        <h1>rafe backup thing </h1>
+        <h1>cool backup thing </h1>
         <p>will look way nicer later</p>
         <button onclick="window.location.href='./offline/retro'">RetroBowl</button>
         <button onclick="window.location.href='./offline/Slope'">Slope</button>
         <button onclick="window.location.href='./offline/MonkeyMart'">Monkeymart</button>
+        <button onclick="window.location.href='./offline/exo/index.html'">Exo</button>
     </body>
 </html>
