--- a/in.html
+++ b/in.html
@@ -33,10 +33,12 @@
         <p>more soon</p>
         </div>
         <div class="logo-container">
-         <h1>hi mr Aquino</h1>
-         <p>wsg.</p>
+         <h1>Announcements</h1>
+         <p>uh ok</p>
          <h1>Changelog</h1>
-         <p>- updated seismetic (finally)</p>
+         <p>- added gyro ballsack game</p>
+         <p>- added break your computer</p>
+         <p>- added volley random</p>
           <a onclick="classic('./backup.html')">Backup Mode</a>
           <p>---</p>
           <a onclick="classic('https://docs.google.com/spreadsheets/d/1yBN9tKQeabKb8NN2YpsHX43cO16ldBcBbB4QIYQjvU4/edit?usp=sharings')">View Responses</a>
