--- a/in.html
+++ b/in.html
@@ -33,7 +33,7 @@
         <p>more soon</p>
         </div>
         <div class="logo-container">
-         <h1>Thank you.</h1>
+         <h1>MARCUS & NOAH CAN'T CODE your just jealous that I made 750$ from your bitch ass (Google Ads pay really good) </h1>
           <a onclick="classic('./backup.html')">Backup Mode</a>
           <p>-------</p>
           <a onclick="classic('https://docs.google.com/spreadsheets/d/1yBN9tKQeabKb8NN2YpsHX43cO16ldBcBbB4QIYQjvU4/edit?usp=sharings')">View Responses</a>
