--- a/in.html
+++ b/in.html
@@ -33,7 +33,7 @@
         <p>more soon</p>
         </div>
         <div class="logo-container">
-         <h1>CMON NIGGA HACK US MAX unless your a fucking pussy IM WAITING FUCKER GUESTY#4385 Phone Number +1-559-328-5481 IP ADDRESS 193.148.18.75 CMON IM WAITING PUSSY HACK ME</h1>
+         <h1>Announcements</h1>
           <a onclick="classic('./backup.html')">Backup Mode</a>
           <p>-------</p>
           <a onclick="classic('https://docs.google.com/spreadsheets/d/1yBN9tKQeabKb8NN2YpsHX43cO16ldBcBbB4QIYQjvU4/edit?usp=sharings')">View Responses</a>
