--- a/in.html
+++ b/in.html
@@ -26,7 +26,7 @@
 				</div>
 				<div class="gamebox__content">
 				  <div class="gamebox__title">Seismetic V2</div>
-				  <button class="gamebox__button" onclick="seismetic()">Launch</button>
+				  <button class="gamebox__button" onclick="window.location.href='https://https://elliante.archivednebulatest.ml/'">Launch</button>
 				</div>
 			  </div>
 			  <!---->
